--- a/MySolution/skiing/Skiing.Tests/tests.csproj
+++ b/MySolution/skiing/Skiing.Tests/tests.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Skiing.Core\skiing.csproj" />
+    <ProjectReference Include="..\Skiing.Core\Skiing.Core.csproj" />
   </ItemGroup>
 
 </Project>
